Remove guava usage from udc module